[pom] Rework argline so coveralls works again